<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bookingItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/seatLogo"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/seat_logo"
        app:srcCompat="@drawable/seat_logo" />

    <TextView
        android:id="@+id/deskNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/seatLogo"
        android:text="@string/desk_num_text"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/fromText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deskNumText"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/seatLogo"
        android:text="@string/from_text"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/toText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fromText"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/seatLogo"
        android:text="@string/to_text"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/deskNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/deskNumText"
        android:text="@string/desk_num"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/fromDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deskNum"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/deskNumText"
        android:text="@string/from_date"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/toDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fromDate"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/deskNumText"
        android:text="@string/to_date"
        android:textColor="@color/text" />

    <Button
        android:id="@+id/bookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toDate"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        android:text="@string/book" />

    <ImageView
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/seatLogo"
        android:layout_alignStart="@+id/seatLogo"
        android:layout_alignEnd="@+id/bookButton"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:background="@color/border"
        android:contentDescription="@string/border" />

</RelativeLayout>