<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Booking">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/booking_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/from_text"
            android:textColor="@color/theme_text"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/fromDate"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/toText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/to_text"
            android:textColor="@color/theme_text"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/toDate"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/pick_date"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/fromText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/pick_date"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/fromDate"
            app:layout_constraintTop_toBottomOf="@+id/fromDate" />

        <ImageView
            android:id="@+id/calendarIcon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/calendar_icon"
            android:src="@android:drawable/ic_menu_today"
            app:layout_constraintStart_toEndOf="@+id/fromDate"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/calendarIcon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/calendar_icon"
            android:src="@android:drawable/ic_menu_today"
            app:layout_constraintStart_toEndOf="@+id/toDate"
            app:layout_constraintTop_toBottomOf="@+id/fromDate" />

        <TextView
            android:id="@+id/mySeatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/my_seats"
            android:textColor="@color/theme_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toDate" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currentBookingsView"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mySeatText" />

        <TextView
            android:id="@+id/availableSeatsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/available_seats"
            android:textColor="@color/theme_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentBookingsView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/availableBookingsView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/availableSeatsText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>